log
Mon Mar 15 13:45:59 UTC 2021: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
test.c:250:5: error: redefinition of ‘main’
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
exercises.c:23:5: note: previous definition of ‘main’ was here
 int main()
     ^~~~
Compilation failed
Mon Mar 15 13:46:37 UTC 2021: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:0:
exercises.c: In function ‘main’:
exercises.c:26:12: error: format ‘%i’ expects argument of type ‘int’, but argument 2 has type ‘int *’ [-Werror=format=]
   printf("%i", &c);
           ~^   ~~
           %ls
test.c: At top level:
test.c:250:5: error: redefinition of ‘main’
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
exercises.c:23:5: note: previous definition of ‘main’ was here
 int main()
     ^~~~
cc1: all warnings being treated as errors
Compilation failed
Mon Mar 15 13:46:49 UTC 2021: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
test.c:250:5: error: redefinition of ‘main’
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
exercises.c:23:5: note: previous definition of ‘main’ was here
 int main()
     ^~~~
Compilation failed
Mon Mar 15 13:47:26 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:16:13: error: format ‘%i’ expects argument of type ‘int’, but argument 2 has type ‘int *’ [-Werror=format=]
    printf("%i", c);
            ~^
            %ls
cc1: all warnings being treated as errors
Compilation failed
Mon Mar 15 13:47:44 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
4d7dc8d
